--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,26 +1,24 @@
 version: v1.0
-name: "Terraform-Github-Team CI Pipeline"
-
+name: "CI/CD Pipeline"
 agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu1804
 
-blocks:
-  - name: "Build"
-    task:
-      secrets:
-        - name: TERRAFORM_TESTS_GITHUB_CREDENTIALS
-      prologue:
-        commands:
-          - export BUILD_VERSION=${SEMAPHORE_GIT_SHA:0:7}
-          - checkout
+global_job_config:
+  secrets:
+    - name: TERRAFORM_TESTS_GITHUB_CREDENTIALS
+  prologue:
+    commands:
+      - checkout --use-cache
 
+blocks:
+  - name: "Tests"
+    task:
       jobs:
         - name: "Pre Commit Hooks"
           commands:
-            - make docker/pre-commit-hooks
+            - make test/pre-commit
         - name: "Unit Tests"
           commands:
-            - make docker/unit-tests
-
+            - make test/unit-tests
